[gd_scene load_steps=8 format=4 uid="uid://s7vwqyn8ga2n"]

[ext_resource type="Script" path="res://addons/AlephVault.WindRose/maps/map.gd" id="1_fhy01"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/maps/layers/floor_layer.gd" id="2_1138s"]
[ext_resource type="TileSet" uid="uid://chxynxt0nfjpd" path="res://addons/AlephVault.WindRose/contrib/dummy/samples/sample-aleph-vault-dummy-squared-tileset.tres" id="3_8fy4j"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/blocking/entities_layer.gd" id="4_lce5j"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/blocking/map_entity.gd" id="5_ap2q0"]
[ext_resource type="Texture2D" uid="uid://b8cui52e1ldlp" path="res://addons/AlephVault.WindRose/contrib/dummy/samples/square-sprite.png" id="6_gs28g"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/dummy/samples/sample-aleph-vault-dummy-controller.gd" id="7_suvvf"]

[node name="Sample" type="Node2D"]

[node name="Map" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(400, 200)
script = ExtResource("1_fhy01")

[node name="FloorLayer" type="Node2D" parent="Map"]
z_index = 10
script = ExtResource("2_1138s")

[node name="Floor" type="TileMapLayer" parent="Map/FloorLayer"]
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAQAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAMAAQAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAA=")
tile_set = ExtResource("3_8fy4j")

[node name="EntitiesLayer" type="Node2D" parent="Map"]
script = ExtResource("4_lce5j")

[node name="Character11" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_ap2q0")
speed = 40.0

[node name="Sprite" type="Sprite2D" parent="Character11"]
position = Vector2(16, 16)
texture = ExtResource("6_gs28g")

[node name="Character12" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_ap2q0")
_size = Vector2i(2, 1)
speed = 40.0

[node name="Sprite1" type="Sprite2D" parent="Character12"]
position = Vector2(16, 16)
texture = ExtResource("6_gs28g")

[node name="Sprite2" type="Sprite2D" parent="Character12"]
position = Vector2(48, 16)
texture = ExtResource("6_gs28g")

[node name="Character21" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_ap2q0")
_size = Vector2i(1, 2)
speed = 40.0

[node name="Sprite1" type="Sprite2D" parent="Character21"]
position = Vector2(16, 16)
texture = ExtResource("6_gs28g")

[node name="Sprite2" type="Sprite2D" parent="Character21"]
position = Vector2(16, 48)
texture = ExtResource("6_gs28g")

[node name="Character22" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_ap2q0")
_size = Vector2i(2, 2)
speed = 40.0

[node name="Sprite1" type="Sprite2D" parent="Character22"]
position = Vector2(16, 16)
texture = ExtResource("6_gs28g")

[node name="Sprite2" type="Sprite2D" parent="Character22"]
position = Vector2(48, 16)
texture = ExtResource("6_gs28g")

[node name="Sprite3" type="Sprite2D" parent="Character22"]
position = Vector2(16, 48)
texture = ExtResource("6_gs28g")

[node name="Sprite4" type="Sprite2D" parent="Character22"]
position = Vector2(48, 48)
texture = ExtResource("6_gs28g")

[node name="Controller" type="Node2D" parent="."]
script = ExtResource("7_suvvf")
